istio-sub-path-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-clusterip1
spec:
  selector:
    app: httpd-deployment1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpd-clusterip2
spec:
  selector:
    app: httpd-deployment2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-deployment1
  template:
    metadata:
      labels:
        app: httpd-deployment1
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-deployment2
  template:
    metadata:
      labels:
        app: httpd-deployment2
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web.example.com"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-virtual-service1
spec:
  hosts:
  - "web.example.com"
  gateways:
  - httpd-gateway
  http:
  - match:
    - uri:
        prefix: /web1
    rewrite:
      uri: /
    route:
    - destination:
        host: httpd-clusterip1
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-virtual-service2
spec:
  hosts:
  - "web.example.com"
  gateways:
  - httpd-gateway
  http:
  - match:
    - uri:
        prefix: /web2
    rewrite:
      uri: /
    route:
    - destination:
        host: httpd-clusterip2
        port:
          number: 80
